# bbva-colombia-rag-assistant

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  prueba_tecnica_IAML.md  pyproject.toml
.claude/: settings.json
.github/workflows/: quality.yml
data/: AGENTS.md
docker/: constraints.txt  start.sh
docs/: AGENTS.md  api-and-cli.md  architecture.md  design-decisions.md  ingestion-and-freshness.md  observability-and-analytics.md  retrieval-and-reranking.md  testing-strategy.md
specs/: AGENTS.md  SPEC-CU01-ingestion.md  SPEC-CU02-query.md  SPEC-CU03-memory.md  SPEC-CU04-analytics.md
src/: AGENTS.md
src/application/: AGENTS.md  prompt_builder.py
src/application/ports/: AGENTS.md  __init__.py  answer_cache_repository.py  chat_memory_repository.py  embedder.py  embedding_cache_repository.py  large_language_model.py  retrieval_strategy.py  scraped_page_repository.py  vector_knowledge_repository.py
src/application/use_cases/: AGENTS.md  __init__.py  analytics.py  answer_query.py  ingest_data.py
src/domain/: AGENTS.md  __init__.py  entities.py
src/infrastructure/: AGENTS.md
src/infrastructure/embeddings/: AGENTS.md  __init__.py  cached_embedder.py  sentence_transformer_embedder.py
src/infrastructure/llm/: AGENTS.md  __init__.py  anthropic_client.py  bedrock_client.py  circuit_breaker.py  factory.py  fallback_chain.py  gemini_client.py  ollama_client.py
src/infrastructure/persistence/: AGENTS.md  __init__.py  cache_repository.py  chat_memory_repository.py  connection.py  pgvector_repository.py  schema.sql
src/interface/: AGENTS.md  analytics.py  cli.py  config.py  container.py  streamlit_app.py
tests/: AGENTS.md
tests/fixtures/: ragas_dataset.jsonl
tests/l1/: test_api_routes.py  test_llm_factory.py  test_rerank_retrieval.py
tests/l2/: test_ragas_light.py
tests/validation/: __init__.py
tests/verification/: __init__.py
(+49 files in other folders)
