[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbva-rag"
version = "1.4.0"
description = "Sistema RAG para consulta de información pública BBVA Colombia"
requires-python = ">=3.11"
dependencies = [
    # Web scraping
    "seleniumbase>=4.29",
    "trafilatura>=1.12",
    # NLP / embeddings / chunking
    "sentence-transformers>=3.0",
    "langchain-text-splitters>=0.3",
    # Vector DB
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    # LLM providers (multi-proveedor)
    "anthropic>=0.34",
    "google-generativeai>=0.8",
    "boto3>=1.35",          # Bedrock
    "ollama>=0.3",
    # RAG / reranker
    "sentence-transformers>=3.0",   # también Cross-Encoder
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    # UI
    "streamlit>=1.38",
    # Config
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    # Utilities
    "tenacity>=9.0",        # retry / circuit-breaker ligero
    "structlog>=24.0",      # logging estructurado
    "typer>=0.12",          # CLI de ingesta
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ragas>=0.2",
    "deepeval>=1.4",
]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
bbva-ingest = "src.interface.cli:app"
bbva-analytics = "src.interface.analytics:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip = [".venv", "data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
